# aus-political-discourse

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: python-virtualenv-only.mdc
docs/: datasource.md
notebooks/: 01_ingestion.ipynb
src/: __init__.py  embed.py  ingest.py  phrases.py  segment.py  stats.py
tests/: __init__.py
